feat: switch to pink theme

--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Page Not Found — VibeCoding</title>
     <meta name="robots" content="noindex" />
+    <meta name="theme-color" content="#ec4899" />
     <link rel="stylesheet" href="./style.css" />
     <meta http-equiv="refresh" content="5; url=./" />
   </head>
