--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="./assets/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="./assets/favicon.png" sizes="any" />
     <link rel="manifest" href="./site.webmanifest" />
-    <meta name="theme-color" content="#2e7d32" />
+    <meta name="theme-color" content="#ec4899" />
 
     <!-- Open Graph / Twitter (update fields in README as needed) -->
     <meta property="og:type" content="website" />
