Remove dark mode and simplify to light theme

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div>
             <h2>Design</h2>
-            <p>Minimal layout with a single accent color and a crisp system font stack. Dark mode included via prefers‑color‑scheme.</p>
+            <p>Minimal layout with a single accent color and a crisp system font stack. Light theme only.</p>
           </div>
         </div>
       </section>
