--- a/resume.html
+++ b/resume.html
@@ -4,23 +4,56 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kevin Varghese — Resume</title>
+  <meta name="description" content="Resume of Kevin Varghese, Business/Data/Systems Analyst in Toronto, Canada." />
   <link rel="stylesheet" href="./css/main.css" />
-  <style>section{max-width:700px;margin:40px auto;}@media print{section{margin:0;}}</style>
+  <style>
+    main{max-width:700px;margin:40px auto;padding:0 16px;}
+    @media print{main{margin:0;} .no-print{display:none;}}
+  </style>
 </head>
 <body>
-  <section>
+  <main>
     <h1>Kevin Varghese</h1>
     <p>Business / Data / Systems Analyst — Toronto</p>
-    <h2>Experience</h2>
-    <ul>
-      <li><strong>Business Analyst</strong> — Example Corp (2023–2024)</li>
-      <li><strong>Data Analyst</strong> — Another Co (2022–2023)</li>
-    </ul>
-    <h2>Education</h2>
-    <ul>
-      <li>Bachelor of Science, University of Somewhere (2022)</li>
-    </ul>
-  </section>
+
+    <section>
+      <h2>Summary</h2>
+      <p>Analyst turning messy processes into measurable outcomes.</p>
+    </section>
+
+    <section>
+      <h2>Experience</h2>
+      <ul>
+        <li><strong>Business Analyst</strong> — Example Corp (2023–2024)</li>
+        <li><strong>Data Analyst</strong> — Another Co (2022–2023)</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Projects</h2>
+      <ul>
+        <li>A/B Testing — Onboarding (2024)</li>
+        <li>Churn Prediction (SaaS) (2024)</li>
+        <li>Claims System Redesign (2024)</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Skills</h2>
+      <ul>
+        <li>Requirements, BPMN, user stories</li>
+        <li>SQL, Python, Tableau</li>
+        <li>Agile, change management</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Education</h2>
+      <ul>
+        <li>Bachelor of Science, University of Somewhere (2022)</li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
 
