--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
         <a class="btn" href="#projects">View Projects</a>
         <a class="btn" href="assets/kevin-varghese-resume.pdf">Download Resume</a>
       </p>
+      <div class="cube" aria-hidden="true">
+        <div class="face front"></div>
+        <div class="face back"></div>
+        <div class="face right"></div>
+        <div class="face left"></div>
+        <div class="face top"></div>
+        <div class="face bottom"></div>
+      </div>
     </section>
 
     <section id="projects">
