Rename Skills section to How I Work

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <ul class="nav">
         <li><a href="#home">Home</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
+        <li><a href="#how-i-work">How I Work</a></li>
         <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -113,8 +113,8 @@
         </div>
     </section>
 
-    <section id="skills" aria-labelledby="skills-h2">
-      <h2 id="skills-h2">How I Work</h2>
+    <section id="how-i-work" aria-labelledby="how-i-work-h2">
+      <h2 id="how-i-work-h2">How I Work</h2>
 
       <div class="rail" role="tablist" aria-label="Lifecycle steps">
           <button role="tab" id="tab-discover" aria-controls="panel-discover" aria-selected="true">Discover</button>
