feat: add tabbed lifecycle and polish assets

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <p>I turn messy processes into measurable outcomes.</p>
       <p class="cta">
         <a class="btn" href="#projects">View Projects</a>
-        <a class="btn" href="assets/kevin-varghese-resume.pdf">Download Resume</a>
+        <a class="btn" href="./assets/kevin-varghese-resume.pdf">Download Resume</a>
       </p>
       <div class="cube" aria-hidden="true">
         <div class="face front"></div>
@@ -117,7 +117,7 @@
       <h2 id="how-i-work-h2">How I Work</h2>
 
       <div class="rail" role="tablist" aria-label="Lifecycle steps">
-          <button role="tab" id="tab-discover" aria-controls="panel-discover" aria-selected="true">Discover</button>
+          <button role="tab" id="tab-discover" aria-controls="panel-discover" aria-selected="false">Discover</button>
           <button role="tab" id="tab-define" aria-controls="panel-define" aria-selected="false">Define</button>
           <button role="tab" id="tab-build" aria-controls="panel-build" aria-selected="false">Build</button>
           <button role="tab" id="tab-validate" aria-controls="panel-validate" aria-selected="false">Validate</button>
@@ -139,7 +139,7 @@
               <li>stakeholder alignment</li>
             </ul>
             <p class="artifact">
-              <a href="/assets/docs/discovery-brief.pdf">discovery brief (PDF)</a>
+              <a href="./assets/docs/discovery-brief.pdf">discovery brief (PDF)</a>
               <a href="#projects" data-project="claims-redesign" class="chip-link">related project</a>
             </p>
           </section>
@@ -157,7 +157,7 @@
               <li>traceability in change log</li>
             </ul>
             <p class="artifact">
-              <a href="/assets/docs/brd-sample.pdf">BRD sample (PDF)</a>
+              <a href="./assets/docs/brd-sample.pdf">BRD sample (PDF)</a>
               <a href="#projects" data-project="claims-redesign" class="chip-link">related project</a>
             </p>
           </section>
@@ -175,7 +175,7 @@
               <li>exec-ready visuals</li>
             </ul>
             <p class="artifact">
-              <a href="/assets/docs/dashboard.pdf">dashboard snapshot (PDF)</a>
+              <a href="./assets/docs/dashboard.pdf">dashboard snapshot (PDF)</a>
               <a href="#projects" data-project="telco-churn" class="chip-link">related project</a>
             </p>
           </section>
@@ -193,7 +193,7 @@
               <li>12 defects blocked pre–go-live</li>
             </ul>
             <p class="artifact">
-              <a href="/assets/docs/ab-readout.pdf">A/B readout (PDF)</a>
+              <a href="./assets/docs/ab-readout.pdf">A/B readout (PDF)</a>
               <a href="#projects" data-project="fintech-ab-test" class="chip-link">related project</a>
             </p>
           </section>
@@ -211,7 +211,7 @@
               <li>errors &lt;1%</li>
             </ul>
             <p class="artifact">
-              <a href="/assets/docs/exec-deck.pdf">exec deck (PDF)</a>
+              <a href="./assets/docs/exec-deck.pdf">exec deck (PDF)</a>
               <a href="#projects" data-project="claims-redesign" class="chip-link">related project</a>
             </p>
           </section>
@@ -222,14 +222,14 @@
       <h2>Resume</h2>
       <p>Last updated: 2025-09-01</p>
       <div class="resume-actions">
-        <a href="resume.html" class="btn">View HTML Resume</a>
-        <a href="assets/kevin-varghese-resume.pdf" class="btn">Download PDF</a>
+        <a href="./resume.html" class="btn">View HTML Resume</a>
+        <a href="./assets/kevin-varghese-resume.pdf" class="btn">Download PDF</a>
       </div>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p><a href="mailto:kevin@example.com">kevin@example.com</a> <a class="btn" href="https://www.linkedin.com/in/...">LinkedIn</a></p>
+      <p><a href="mailto:kevin@example.com?subject=Portfolio%20Inquiry%20%E2%80%94%20Kevin%20Varghese">Email</a> <a class="btn" href="https://www.linkedin.com/in/kevin-varghese/">LinkedIn</a></p>
     </section>
   </main>
 
