--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,8 @@
   <title>Kevin Varghese — Resume</title>
   <meta name="description" content="Resume of Kevin Varghese, Business/Data/Systems Analyst in Toronto, Canada." />
   <link rel="stylesheet" href="./css/main.css" />
-  <style>
-    main{max-width:700px;margin:40px auto;padding:0 16px;}
-    @media print{main{margin:0;} .no-print{display:none;}}
-  </style>
 </head>
-<body>
+<body class="resume">
   <main>
     <h1>Kevin Varghese</h1>
     <p>Business / Data / Systems Analyst — Toronto</p>
@@ -23,10 +19,22 @@
 
     <section>
       <h2>Experience</h2>
-      <ul>
-        <li><strong>Business Analyst</strong> — Example Corp (2023–2024)</li>
-        <li><strong>Data Analyst</strong> — Another Co (2022–2023)</li>
-      </ul>
+      <article>
+        <h3>Business Analyst — Example Corp</h3>
+        <p>2023–2024</p>
+        <ul>
+          <li>Mapped claims workflows and reduced errors.</li>
+          <li>Led UAT to block 12 defects.</li>
+        </ul>
+      </article>
+      <article>
+        <h3>Data Analyst — Another Co</h3>
+        <p>2022–2023</p>
+        <ul>
+          <li>Built churn model with ROC-AUC 0.76.</li>
+          <li>Automated dashboard updates.</li>
+        </ul>
+      </article>
     </section>
 
     <section>
@@ -40,11 +48,7 @@
 
     <section>
       <h2>Skills</h2>
-      <ul>
-        <li>Requirements, BPMN, user stories</li>
-        <li>SQL, Python, Tableau</li>
-        <li>Agile, change management</li>
-      </ul>
+      <p>Requirements, BPMN, user stories · SQL, Python, Tableau · Agile, change management</p>
     </section>
 
     <section>
@@ -53,6 +57,8 @@
         <li>Bachelor of Science, University of Somewhere (2022)</li>
       </ul>
     </section>
+
+    <p class="updated">Last updated: 2025-09-01</p>
   </main>
 </body>
 </html>
