Replace site with maintenance notice

--- a/index.html
+++ b/index.html
@@ -1,56 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Acme Bank</title>
-  <meta name="description" content="Acme Bank provides secure banking services including checking, savings, and loans." />
-  <link rel="stylesheet" href="./css/main.css" />
+  <title>will be back soon</title>
 </head>
 <body>
-  <header>
-    <nav>
-      <ul class="nav">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#accounts">Accounts</a></li>
-        <li><a href="#loans">Loans</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="home" class="hero">
-      <h1>Acme Bank</h1>
-      <h2>Secure banking for your future</h2>
-      <p class="cta">
-        <a class="btn" href="#accounts">Open an Account</a>
-        <a class="btn" href="#contact">Contact Us</a>
-      </p>
-    </section>
-
-    <section id="accounts">
-      <h2>Accounts</h2>
-      <p>Checking and savings accounts with no hidden fees.</p>
-    </section>
-
-    <section id="loans">
-      <h2>Loans</h2>
-      <p>Flexible personal and home loan options at competitive rates.</p>
-    </section>
-
-    <section id="about">
-      <h2>About</h2>
-      <p>Acme Bank has served communities since 1971. We put customers first.</p>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p><a href="mailto:info@acmebank.test">Email us</a> or call 1-800-000-0000.</p>
-    </section>
-  </main>
-  <footer id="footer">
-    <p>© 2025 Acme Bank. All rights reserved.</p>
-  </footer>
+  will be back soon
 </body>
 </html>
