--- a/projects/note-widget.html
+++ b/projects/note-widget.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Note Widget</title>
+  <title>note widget</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="../style.css" />
 </head>
@@ -22,7 +22,8 @@
     <p>Constraint (one note) increased daily use.</p>
   </main>
   <footer>
-    <p><a href="../index.html">Back to home</a></p>
+    <p><a href="../index.html">back to home</a></p>
   </footer>
+  <script src="../script.js" defer></script>
 </body>
 </html>
