added first project

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>kevin — my explorations</title>
+  <title>kevin's blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -20,8 +20,11 @@
     <h2>my explorations</h2>
     <ul>
       <li>
-        <a href="projects/note-widget.html">Note Widget</a>
-        <p>One note, always visible on the home screen.</p>
+        <img class="project-logo" src="projects/noteapp/noteapp-logo.png" alt="NoteApp logo" />
+        <div class="project-copy">
+          <a href="projects/note-widget.html">NoteApp</a>
+          <p>a tool that keeps ideas within reach, making notes visible, simple, and part of daily life</p>
+        </div>
       </li>
       <li class="placeholder" aria-label="new project under construction">
         <div aria-hidden="true">new project under construction</div>
