--- a/projects/note-widget.html
+++ b/projects/note-widget.html
@@ -2,27 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>note widget</title>
+  <title>NoteApp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-  <main class="project">
-    <h1>Note Widget</h1>
-    <p>One note, always visible on the home screen.</p>
-    <h2>Purpose</h2>
-    <p>Keep a single thought present without noise.</p>
-    <h2>Why</h2>
-    <p>Attention is scarce; fewer choices help focus.</p>
-    <h2>Approach</h2>
-    <p>SwiftUI widget, simple state, no sync by default.</p>
-    <h2>Outcome</h2>
-    <p>Launch-to-note under one second; zero setup.</p>
-    <h2>Reflection</h2>
-    <p>Constraint (one note) increased daily use.</p>
+  <main class="project noteapp">
+    <header class="project-header">
+      <div class="project-title">
+        <img class="project-mark" src="noteapp/noteapp-logo.png" alt="noteapp logo" />
+        <h1>noteapp</h1>
+        <a class="project-github" href="https://github.com/bricklemming3817/NoteApp" target="_blank" rel="noopener noreferrer" aria-label="open noteapp on github">
+          <svg viewBox="0 0 16 16" aria-hidden="true" focusable="false">
+            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82a7.65 7.65 0 0 1 4.01 0c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.74.54 1.49 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8Z"/>
+          </svg>
+        </a>
+      </div>
+      <p class="project-tagline">a minimal tool that keeps ideas within reach, making notes visible, simple, and part of daily life.</p>
+    </header>
+
+    <section class="project-section">
+      <h2>what</h2>
+      <p>noteapp is a lightweight note taking app that keeps the right ideas in sight. quick to add, easy to edit, nothing extra.</p>
+      <div class="device-gallery trio">
+        <figure class="device-frame">
+          <img src="noteapp/image1.png" alt="noteapp capture screen showing a highlighted note" loading="lazy" />
+        </figure>
+        <figure class="device-frame">
+          <img src="noteapp/image2.png" alt="noteapp editing screen with keyboard visible" loading="lazy" />
+        </figure>
+        <figure class="device-frame">
+          <img src="noteapp/image3.png" alt="noteapp list of notes organized by priority" loading="lazy" />
+        </figure>
+      </div>
+    </section>
+
+    <section class="project-section">
+      <h2>why</h2>
+      <p>notes shouldn’t hide behind taps. keeping a small set of ideas in sight helps you focus on what matters.</p>
+      <figure class="device-frame centered">
+        <img src="noteapp/image4.png" alt="noteapp widget pinned on the phone home screen" loading="lazy" />
+      </figure>
+    </section>
+
+    <section class="project-section">
+      <h2>how</h2>
+      <ul class="feature-list">
+        <li>capture ideas in a single view</li>
+        <li>pin important notes on top</li>
+        <li>see one note at a glance on your home screen</li>
+        <li>clean layout with no clutter</li>
+        <li>hidden folders — less clutter only what’s relevant upfront</li>
+      </ul>
+      <div class="device-gallery duo">
+        <figure class="device-frame">
+          <img src="noteapp/image5.png" alt="noteapp settings screen with customization options" loading="lazy" />
+        </figure>
+        <figure class="device-frame">
+          <img src="noteapp/image6.png" alt="noteapp folder view showing hidden ideas" loading="lazy" />
+        </figure>
+      </div>
+      <figure class="device-frame centered gif">
+        <img src="noteapp/gif3.gif" alt="animated walkthrough of noteapp interactions" loading="lazy" />
+      </figure>
+    </section>
   </main>
   <footer>
-    <p><a href="../index.html">back to home</a></p>
+    <p><a class="project-return" href="../index.html">return to the shelf ↗</a></p>
   </footer>
   <script src="../script.js" defer></script>
 </body>
