--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <h2>my explorations</h2>
     <ul>
       <li>
-        <img class="project-logo" src="projects/noteapp/noteapp-logo.png" alt="NoteApp logo" />
+        <a class="project-logo-link" href="projects/note-widget.html" aria-label="Open NoteApp project page">
+          <img class="project-logo" src="projects/noteapp/noteapp-logo.png" alt="NoteApp logo" />
+        </a>
         <div class="project-copy">
           <a href="projects/note-widget.html">NoteApp</a>
           <p>a tool that keeps ideas within reach, making notes visible, simple, and part of daily life</p>
